k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
  labels:
    name: gitlab
    environment: production
